--- a/themes/spencer.css
+++ b/themes/spencer.css
@@ -54,6 +54,9 @@ a {
 }
 
 .path {
+  display: inline-block;
+  width: calc(100% - 150px);
+  max-width: 650px;
   margin-bottom: 1.5rem;
   font-size: 0.88rem;
   color: #999;
@@ -123,6 +126,28 @@ a.item:hover {
   padding: 0.5rem 1rem;
   margin: 1.5rem auto;
   max-width: 180px;
+  user-select: none;
+  border-radius: 2px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+}
+
+.dltoggle-button-container {
+  display: inline-block;
+  width: 150px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.dltoggle-button {
+  display: block;
+  background-color: #000;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  margin: 1.5rem auto;
+  max-width: 150px;
   user-select: none;
   border-radius: 2px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
