--- a/themes/spencer.css
+++ b/themes/spencer.css
@@ -55,8 +55,8 @@ a {
 
 .path {
   display: inline-block;
-  width: calc(100% - 150px);
-  max-width: 650px;
+  width: calc(100% - 50px);
+  max-width: 750px;
   margin-bottom: 1.5rem;
   font-size: 0.88rem;
   color: #999;
@@ -131,27 +131,53 @@ a.item:hover {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
 }
 
-.dltoggle-button-container {
-  display: inline-block;
-  width: 150px;
-  text-align: center;
-  box-sizing: border-box;
-}
-
-.dltoggle-button {
+.dropBtn {
   display: block;
-  background-color: #000;
-  color: #ffffff;
+  background-color: #FFF;
+  color: #000000;
   cursor: pointer;
   font-weight: bold;
   text-decoration: none;
   padding: 0.5rem 1rem;
-  margin: 1.5rem auto;
-  max-width: 150px;
+  margin: 1.5rem auto 0.5rem;
+  max-width: 50px;
   user-select: none;
+  border: none;
   border-radius: 2px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
 }
+
+.menu-container {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.menu {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.menu a:hover {background-color: #ddd;}
+
+.menu-container:hover .menu {display:block;}
+
+.menu-container:hover .dropBtn {background-color: #A9A9A9;}
 
 .markdown-body {
   font-family: var(--base-font-family) !important;
