--- a/themes/spencer.css
+++ b/themes/spencer.css
@@ -38,8 +38,24 @@ nav {
 }
 
 a {
+  position: relative;
+  overflow: hidden;
   transition: 0.2s all ease-in-out;
   color: #0070f3;
+}
+
+span.ripple {
+  position: absolute; 
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+@keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
 }
 
 .brand {
